
  * pdata.frames are now more consistent after subsetting:
      => identical(pdataframe, pdataframe[1:nrow(pdataframe), ]) yields TRUE now
       * fixed: after subsetting unnecessary information was added to the resulting pdata.frame.
       * fixed: mode of index attribute was changed (unintentionally "simplified").
  * pdata.frame is now a little more informative about NA values in either individual or time index
    (a warning issued when such a pdata.frame is created).
  * [.pdata.frame: indexing a pdata.frame is now fully consistent to indexing a data.frame (as documented):
       * fixed: special case of indexing by [i] (missing j) which erroneously returned rows instead of columns.
  * pdata.frame's warnings:
       * if duplicate couples or NA values in the index variables are found while creating a pdata.frame,
         the warning now gives users a hint how to find those (table(index(your_pdataframe), useNA = "ifany").
       * printed is now "id-time" (was: "time-id") to be consistent with order of index variables.

Changes since version 1.5-23

  * make.pconsecutive: new function to make a (p)data.frame or pseries consecutive, meaning having consecutive
                       time periods, t, t+1, t+2, ..., where t is an integer (fills in missing time periods).
                       Optionally, by argument balanced, (p)data.frames) or pseries can be made consecutive 
                       and at the same time also balanced.
  * make.pbalanced: new function to make a (p)data.frame or pseries balanced (but not consecutive)
                    (fills in missing time periods).

Changes since version 1.5-24

  * print.summary.plm: for FD models: now also prints number of observations used during estimation, because
                       these differ from the number of obervations (rows) in the model frame due to diff-ing.
  * pres: fixed handling of pggls' FD models and, thus, summary on pggls' FD models now works without error.