@@ -1,19 +1,23 @@
 \name{pbltest}
 \alias{pbltest}
+\alias{pbltest.formula}
+\alias{pbltest.plm}
+
 \title{Baltagi and Li Serial Dependence Test For Random Effects Models}
 
 \description{Baltagi and Li (1995)'s Lagrange multiplier test for AR(1) or MA(1) idiosyncratic errors in panel models with random effects.
 }
 
 \usage{
-pbltest(x, data, alternative = c("twosided","onesided"), index = NULL, ...)
+\method{pbltest}{formula}(x, data, 
+                         alternative = c("twosided", "onesided"), index = NULL, ...)
+\method{pbltest}{plm}(x, alternative = c("twosided", "onesided"), ...)
 }
 
 \arguments{
- \item{x}{a model formula,}
- \item{data}{a \code{data.frame},}
- \item{alternative}{one of \code{"twosided"},
-  \code{"onesided"}. Selects either \eqn{H_A: \rho \neq 0} or \eqn{H_A: \rho 0}
+ \item{x}{a model formula or an estimated random--effects model of class \code{plm} ,}
+ \item{data}{for the formula interface only: a \code{data.frame},}
+ \item{alternative}{one of \code{"twosided"}, \code{"onesided"}. Selects either \eqn{H_A: \rho \neq 0} or \eqn{H_A: \rho = 0}
    (i.e., the Normal or the Chi-squared version of the test),}
  \item{index}{the index of the \code{data.frame},}
  \item{\dots}{further arguments.}
@@ -21,7 +25,7 @@ pbltest(x, data, alternative = c("twosided","onesided"), index = NULL, ...)
 
 \details{
 This is a Lagrange multiplier test for the null of no serial
-correlation, against the alternative of either an AR(1) or an MA(1) process, in the idiosyncratic component of the error term in a random effects panel model (as the analytical expression of the test turns out to be the same under both alternatives, see Baltagi and Li (1995, 1998)). The \code{alternative} argument, defaulting to \code{twosided}, allows testing for positive serial correlation only, if set to \code{onesided}.
+correlation, against the alternative of either an AR(1) or an MA(1) process, in the idiosyncratic component of the error term in a random effects panel model (as the analytical expression of the test turns out to be the same under both alternatives, see Baltagi and Li (1995, 1997)). The \code{alternative} argument, defaulting to \code{twosided}, allows testing for positive serial correlation only, if set to \code{onesided}.
 }
 
 \value{
@@ -45,7 +49,14 @@ pretest estimators of an error components model with autocorrelated disturbances
 
 \examples{
 data("Grunfeld", package = "plm")
+
+# formula interface
 pbltest(inv ~ value + capital, data = Grunfeld)
+
+# plm interface
+re_mod <- plm(inv ~ value + capital, data = Grunfeld, model = "random")
+pbltest(re_mod)
+pbltest(re_mod, alternative = "onesided")
 }
 
 \keyword{htest}
